# tmeformer

./: .gitignore  .readthedocs.yaml  README.md  TMEformer.yaml  pyproject.toml
docs/: cli.rst  conf.py  index.rst  make.bat  modules.rst  tme.rst
docs/tutorials/: index.rst
docs/tutorials/isp_emb_sim/: demo-target-rank-ADT2CRPC.ipynb  demo-tme-composition-ADT2CRPC.ipynb  demo-tme-rank-ADT2CRPC.ipynb
docs/tutorials/isp_gene_exp/: demo-prep-and-train-gep.ipynb  demo-target-rank-nepc-marker.ipynb  demo-tme-compo-nepc-marker.ipynb  demo-tme-rank-nepc-marker.ipynb
src/TMEformer/: __init__.py  classifier.py  classifier_utils.py  collator_for_classification.py  emb_extractor.py  evaluation_utils.py  in_silico_perturber.py  in_silico_perturber_stats.py  mtl_classifier.py  perturber_utils.py  pretrainer.py  regressor.py  tokenizer.py
src/TMEformer/cli/: __init__.py  emb_isp_target.py  emb_isp_tme.py  gep_ft_model.py  gep_isp_target.py  gep_isp_tme.py
src/TMEformer/mtl/: eval_utils.py  imports.py  model.py  train_utils.py
src/TMEformer/tme/: TmeModeling_bert.py  TmeModeling_utils.py  TmeModeling_utils_isp_cell.py  TmeModeling_utils_isp_ds.py  TmeModeling_utils_isp_gep.py  TmeModeling_utils_isp_lst.py  TmeModeling_utils_isp_pipe.py  TmeModeling_utils_isp_sim.py  TmeModeling_utils_prep.py
