[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TMEformer"
version = "0.1.0"
description = "TME extension of Geneformer"
authors = [
    {name = "lishensuo", email = "lishensuo@163.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anndata==0.11.3",
    "datasets==3.2.0",
    "loompy==3.0.8",
    "matplotlib==3.10.0",
    "multiprocess==0.70.16",
    "numpy==2.1.3",
    "optuna==4.2.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "peft==0.14.0",
    "ray==2.42.0",
    "scanpy==1.10.4",
    "scikit_learn==1.6.1",
    "scipy==1.13.1",
    "seaborn==0.13.2",
    "statannotations==0.7.2",
    "statsmodels==0.14.4",
    "tdigest==0.5.2.2",
    "torch==2.8.0+cu128",
    "tqdm==4.67.1",
    "transformers==4.56.2"
]


# dependencies = [
#     "numpy>=1.24.0",
#     "scipy>=1.10.0",
# ]

[tool.setuptools.packages.find]
where = ["src"]
include = ["TMEformer*"]

[tool.setuptools.package-data]
TMEformer = ["*.pkl", "gene_dictionaries_30m/*", "gene_dictionaries_95m/*"]


[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints",
    "myst-parser",
    "nbsphinx",
]

[project.scripts]
tmeformer-gep-ft-model = "TMEformer.cli.gep_ft_model:main"
tmeformer-gep-isp-target = "TMEformer.cli.gep_isp_target:main"
tmeformer-gep-isp-tme = "TMEformer.cli.gep_isp_tme:main"

tmeformer-emb-isp-target = "TMEformer.cli.emb_isp_target:main"
tmeformer-emb-isp-tme = "TMEformer.cli.emb_isp_tme:main"
